<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/setting_background"
    android:orientation="vertical">

    <Switch
        android:id="@+id/bgm_control"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:checked="true"
        android:fontFamily="cursive"
        android:onClick="onClick"
        android:showText="true"
        android:text="@string/background_music"
        android:textColor="#FFFFFF"
        android:textCursorDrawable="@color/colorPrimary"
        android:textOff="@string/off"
        android:textOn="@string/on"
        android:textSize="36sp"
        android:textStyle="bold"
        android:thumbTint="@color/colorPrimaryDark"
        android:trackTint="@color/colorPrimary" />

    <Switch
        android:id="@+id/language_control"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="0dp"
        android:checked="true"
        android:fontFamily="cursive"
        android:onClick="onClick"
        android:showText="true"
        android:text="@string/change_language"
        android:textColor="#FFFFFF"
        android:textCursorDrawable="@color/colorPrimary"
        android:textOff="@string/chinese"
        android:textOn="@string/english"
        android:textSize="36sp"
        android:textStyle="bold"
        android:thumbTint="@color/colorPrimaryDark"
        android:trackTint="@color/colorPrimary" />

    <Button
        android:id="@+id/back_to_menu"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="550dp"
        android:layout_marginTop="150dp"
        android:fontFamily="cursive"
        android:onClick="onClick"
        android:text="@string/main_menu"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />


</LinearLayout>