<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".maingame.MainActivity">

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/signup_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/sign_up"
            android:textColor="#000000"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/newusername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:fontFamily="cursive"
            android:hint="@string/new_username"
            android:importantForAutofill="no"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/newpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:fontFamily="cursive"
            android:hint="@string/new_password"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/reenterpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="15"
            android:fontFamily="cursive"
            android:hint="@string/reenter_password"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/createaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="cursive"
            android:onClick="onClick"
            android:text="@string/create_account"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Sign_In"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="cursive"
            android:onClick="onClick"
            android:text="@string/Sign_In"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
