<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".maingame.MainActivity">

    <LinearLayout
        android:id="@+id/startGameLayout"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:layout_gravity="center"
        android:background="@drawable/new_game_background"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/newGame"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#023F42"
            android:fontFamily="cursive"
            android:onClick="onClick"
            android:text="@string/newGame"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/viewLocalRecords"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="cursive"
            android:backgroundTint="#023F42"
            android:onClick="onClick"
            android:text="@string/viewLocalRecords"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/viewUserRecords"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#023F42"
            android:fontFamily="cursive"
            android:onClick="onClick"
            android:text="@string/viewUserRecords"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/switchAccount"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="#023F42"
            android:fontFamily="cursive"
            android:onClick="onClick"
            android:text="@string/switchAccount"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>