<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".maingame.MainActivity">

    <LinearLayout
        android:id="@+id/startLayout"
        android:layout_width="match_parent"
        android:layout_height="562dp"
        android:layout_gravity="center"
        android:background="@drawable/menu_background"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/Welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:text="@string/Welcome"
            android:textColor="#FCFCFC"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_in"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:fontFamily="cursive"
            android:onClick="onClick"
            android:text="@string/SignIn"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sign_up"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="cursive"
            android:onClick="onClick"
            android:text="@string/SignUp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/quick_start"
            style="@android:style/Widget.DeviceDefault.Button.Borderless.Colored"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="cursive"
            android:onClick="onClick"
            android:text="@string/quickstart"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/settings"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-80dp"
        android:layout_marginTop="320dp"
        android:layout_weight="1"
        android:onClick="onClick"
        app:srcCompat="@android:drawable/ic_menu_manage" />

</LinearLayout>